2009-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/src/sigaddset.c, posix/src/sigdelset.c,
	posix/src/sigemptyset.c, posix/src/sigfillset.c,
	posix/src/sigismember.c, posix/src/sigprocmask.c:
	Remove unnecessary includes.

2009-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/Makefile.am: Unconditionally install
	posix/include/rtems/posix/sigset.h.
	* posix/include/rtems/posix/psignal.h: Reflect having split out
	posix/include/rtems/posix/sigset.h.
	* posix/include/rtems/posix/sigset.h: New (Split out from
	posix/include/rtems/posix/psignal.h).

2009-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/Makefile.am: Unconditionally build src/wait.c src/waitpid.c.
	* posix/Makefile.am: Unconditionally build src/fork.c, src/vfork.c.

2009-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac, posix/Makefile.am, wrapup/Makefile.am:
	Eliminate AM_CONDITIONAL LIBPOSIX.

2009-12-02	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* libcsupport/src/__times.c, libmisc/cpuuse/cpuusagedata.c,
	libmisc/cpuuse/cpuusagereport.c, libmisc/cpuuse/cpuusagereset.c,
	rtems/include/rtems/rtems/types.h, rtems/src/ratemongetstatistics.c,
	rtems/src/ratemonreportstatistics.c, score/src/threaddispatch.c,
	score/src/threadinitialize.c, score/src/threadtickletimeslice.c:
	Updated copyright line.

2009-12-02	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* configure.ac, libcsupport/src/__times.c,
	libmisc/cpuuse/cpuusagedata.c, libmisc/cpuuse/cpuusagereport.c,
	libmisc/cpuuse/cpuusagereset.c, rtems/include/rtems/rtems/ratemon.h,
	rtems/include/rtems/rtems/types.h, rtems/src/ratemongetstatistics.c,
	rtems/src/ratemongetstatus.c, rtems/src/ratemonperiod.c,
	rtems/src/ratemonreportstatistics.c,
	score/include/rtems/score/thread.h, score/src/threaddispatch.c,
	score/src/threadinitialize.c, score/src/threadtickletimeslice.c:
	Changed the configuration of statistics granularity to use just one
	define.

2009-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>
